# music-of-languages

./: .env.example  .gitignore  README.md  pyproject.toml
data/: clips_manifest.parquet
docs/: capital-stations-findings.md  data-integrity-findings.md  data-integrity-phase.md  feature-exploration-cycle.md  feature-exploration-findings.md  metrics-glossary.md  phase0-findings.md  phase1-handoff.md  source-evaluation.md
docs/superpowers/plans/: 2026-06-24-phase0-exploration.md  2026-06-25-feature-exploration-ssl.md  2026-06-29-source-evaluation.md  2026-06-30-verified-segments.md  2026-07-01-data-integrity-de.md
docs/superpowers/specs/: 2026-06-24-music-of-languages-design.md  2026-06-25-feature-exploration-cycle-design.md  2026-06-29-source-evaluation-design.md  2026-06-30-verified-segments-design.md  2026-07-01-data-integrity-de-design.md
notebooks/: 01_explore_features.ipynb  02_validate_typology.ipynb  03_candidate_methods_feasibility.ipynb  04_ssl_vs_prosody.ipynb  05_data_integrity.ipynb
scripts/: build_segment_prosody.py  collect_sample.py  collect_segments.py  embed_segments.py  probe_source.py  run_data_integrity.py
src/musiclang/: __init__.py  audio.py  config.py  pipeline.py
src/musiclang/clean/: select.py  vad.py  window.py
src/musiclang/features/: aggregate.py  base.py  intervals.py  pitch.py  prosody_acoustic.py  rhythm_metrics.py  speech_rate.py  ssl_embedding.py
src/musiclang/ingest/: language_filter.py  manifest.py  radio.py
src/musiclang/probe/: __init__.py  adapters.py  core.py
src/musiclang/proximity/: distance.py  embedding.py
src/musiclang/validation/: family_tree.py  outliers.py  proximity_agreement.py  robustness.py  typology.py
src/musiclang/verify/: __init__.py  llm_judge.py  tagger.py  verifier.py  whisper_id.py
tests/: test_aggregate.py  test_audio.py  test_build_segment_prosody.py  test_collect_segments.py  test_config.py  test_distance.py  test_embed_segments.py  test_embedding_proximity.py  test_family_tree.py  test_features_base.py  test_intervals.py  test_language_filter.py  test_manifest.py  test_outliers.py  test_pipeline.py  test_pitch.py  test_probe_adapters.py  test_probe_core.py  test_probe_runner.py  test_prosody_acoustic.py  test_proximity_agreement.py  test_proximity_embedding.py  test_radio.py  test_rhythm_metrics.py  test_robustness.py  test_run_data_integrity.py  test_segments_manifest.py  test_select.py  test_speech_rate.py  test_ssl_embedding.py  test_typology.py  test_vad.py  test_verify_openai.py  test_verify_tagger.py  test_verify_verifier.py  test_window.py
