[project]
name = "musiclang"
version = "0.0.1"
description = "The Music of Languages — prosody-based language proximity (Phase 0 exploration)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",  # parquet engine for pandas to_parquet/read_parquet (collector + notebooks)
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "praat-parselmouth>=0.4.3",
    "librosa>=0.10",
    "soundfile>=0.12",
    "silero-vad>=5.1",
    # torch/torchaudio come from the PyTorch CPU index (see [tool.uv] below) and are pinned by uv.lock.
    # Cap <2.12: torchaudio's newest CPU build is 2.11 and silero-vad imports it, so torch is gated to a
    # version with a matching torchaudio (a mismatched pair fails to import, WinError 127). Within that bound
    # the exact version is lock-decided. (Aside: torch 2.12.x+cpu also fails to init on Windows, WinError 1114.)
    "torch>=2.2,<2.12",
    "torchaudio>=2.2,<2.12",
    "requests>=2.31",
    "openai>=1.0",         # OpenAI SDK — light LLM language guard for capital-station selection
    "python-dotenv>=1.0",  # load OPENAI_API_KEY from a gitignored .env for the collector
    "matplotlib>=3.8",
    "transformers>=4.40",  # HF SSL models (wav2vec2 / XLS-R / HuBERT) for SSLEmbeddingExtractor
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "jupyter>=1.0", "nbstripout>=0.7"]
# feasibility probe deps graduated to core (transformers) in the SSL feature-exploration cycle.
feasibility = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: tests that download models or hit the network (deselected by default)"]
addopts = "-m 'not slow'"
filterwarnings = [
    # Third-party (audioread via librosa) importing stdlib modules deprecated for removal in Python 3.13.
    "ignore:'aifc' is deprecated:DeprecationWarning",
    "ignore:'audioop' is deprecated:DeprecationWarning",
    "ignore:'sunau' is deprecated:DeprecationWarning",
    # sklearn MDS API churn (params still valid in the pinned sklearn; revisit on upgrade to 1.10). See Phase-1 tech debt.
    "ignore:The default value of `init` will change:FutureWarning",
    "ignore:The `dissimilarity` parameter is deprecated:FutureWarning",
]

# --- uv configuration ---
[tool.uv]
# Use uv-managed CPython only. The system Anaconda interpreter makes torch>=2.8 fail to
# initialize on Windows (OSError WinError 1114 on c10.dll); a managed Python avoids it
# entirely (torch 2.11 imports cleanly there). This keeps the project off Anaconda.
python-preference = "only-managed"

# torch/torchaudio are served as +cpu wheels from the PyTorch CPU index, not PyPI.
# `explicit = true` means ONLY packages mapped to it in [tool.uv.sources] use this index.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
